@@ -11,10 +11,17 @@ import org.devcourse.resumeme.global.exception.ExceptionCode;
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+import java.util.stream.IntStream;
+
+import static org.devcourse.resumeme.business.resume.domain.Property.COMPANY;
+import static org.devcourse.resumeme.business.resume.domain.Property.CONTENT;
+import static org.devcourse.resumeme.business.resume.domain.Property.DESCRIPTION;
+import static org.devcourse.resumeme.business.resume.domain.Property.DUTY;
+import static org.devcourse.resumeme.business.resume.domain.Property.POSITION;
+import static org.devcourse.resumeme.business.resume.domain.Property.SKILL;
+import static org.devcourse.resumeme.business.resume.domain.Property.TITLE;
 
 @Getter
 @NoArgsConstructor(access = AccessLevel.PROTECTED)
@@ -33,7 +40,7 @@ public class Career implements Converter {
     private CareerPeriod careerPeriod;
 
     public Career(String companyName, String position, List<String> skills, List<Duty> duties,
-                  LocalDate careerStartDate, LocalDate endDate, String careerContent) {
+            LocalDate careerStartDate, LocalDate endDate, String careerContent) {
         validateCareer(companyName, position);
 
         this.companyName = companyName;
@@ -49,42 +56,40 @@ public class Career implements Converter {
         Validator.check(position == null, ExceptionCode.NO_EMPTY_VALUE);
     }
 
-    @Override
-    public Component of(Long resumeId) {
-        Component position = new Component("position", this.position, null, null, resumeId, null);
-        Component skills = new Component("skill", String.join(",", this.skills), null, null, resumeId, null);
-        Component careerContent = new Component("careerContent", this.careerContent, null, null, resumeId, null);
-
-        Component descriptions = new Component("description", "description", null, null, resumeId, List.of(position, skills, careerContent));
-        Component duty = new Component("duty", "duty", null, null, resumeId, getDuties(resumeId));
-
-        return new Component("company", this.companyName, this.careerPeriod.getStartDate(), this.careerPeriod.getEndDate(), resumeId, List.of(descriptions, duty));
+    public Career(Map<String, String> component) {
+        this(component.get(COMPANY.name()), component.get(POSITION.name()), Arrays.asList(component.get(SKILL.name()).split(",")), getDuties(component),
+                LocalDate.parse(component.get(COMPANY.startDate())), LocalDate.parse(component.get(COMPANY.endDate())), component.get(CONTENT.name()));
     }
 
-    private List<Component> getDuties(Long resumeId) {
-        return duties.stream()
-                .map(duty -> new Component(duty.getTitle(), duty.getDescription(), duty.getStartDate(), duty.getEndDate(), resumeId, null))
+    private static List<Duty> getDuties(Map<String, String> component) {
+        return IntStream.range(0, Integer.parseInt(component.get(DUTY.name())))
+                .mapToObj(i -> new Duty(component, i))
                 .toList();
     }
 
-    public static Career from(Component careerComponent) {
-        Map<String, String> description = new HashMap<>();
-        List<Duty> duties = new ArrayList<>();
+    @Override
+    public Component of(Long resumeId) {
+        Component position = new Component(POSITION, this.position, resumeId);
+        Component skills = new Component(SKILL, String.join(",", this.skills), resumeId);
+        Component careerContent = new Component(CONTENT, this.careerContent, resumeId);
 
-        for (Component component : careerComponent.getComponents()) {
-            if (component.getProperty().equals("description")) {
-                description = component.getComponents().stream()
-                        .collect(Collectors.toMap(Component::getProperty, Component::getContent));
-            } else if (component.getProperty().equals("duty")) {
-                duties = component.getComponents().stream()
-                        .map(component1 -> new Duty(component1.getProperty(), component1.getStartDate(), component1.getEndDate(), component1.getContent()))
-                        .toList();
-            }
+        Component descriptions = new Component(DESCRIPTION, null, null, null, resumeId, List.of(position, skills, careerContent));
+        List<Component> duties = getDuties(resumeId);
+        Component duty = new Component(DUTY, String.valueOf(duties.size()), null, null, resumeId, duties);
+
+        return new Component(COMPANY, this.companyName, this.careerPeriod.getStartDate(), this.careerPeriod.getEndDate(), resumeId, List.of(descriptions, duty));
+    }
+
+    private List<Component> getDuties(Long resumeId) {
+        List<Component> result = new ArrayList<>();
+        for (int i = 0; i < duties.size(); i++) {
+            Duty duty = duties.get(i);
+
+            Component description = new Component(DUTY.name() + DESCRIPTION.name() + i, duty.getDescription(), resumeId);
+            result.add(new Component(DUTY.name() + TITLE.name() + i, duty.getTitle(), duty.getStartDate(), duty.getEndDate(), resumeId, List.of(description)));
         }
 
-        return new Career(careerComponent.getContent(), description.get("position"),
-                Arrays.asList(description.get("skill").split(",")), duties, careerComponent.getStartDate(),
-                careerComponent.getEndDate(), description.get("careerContent"));
+        return result;
     }
 
 }
